# AIHAO

./: .flake8  .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: cicd.yml  publish_test.yml
aihao/: __init__.py  audio_engine.py  greeting.py  offline_speech_recognition_aihao.py  speech_recognition.py  speech_recognition_aihao.py
aihao/util_funtions/: date_time_aihao.py  llm_model_download.py  text_processor.py
config/: setup.sh
data/: data_test.sql  greeting_prompts.txt  schema_test.sql
docs/: code_review_guidelines.md  contributing_guidelines.md
tests/: coverage.xml  test_audio_engine.py  test_greeting.py  test_offline_speech_recognition.py  test_speech_recognition.py
tests/test_util_functions/: test_date_time_aihao.py  test_llm_model_download.py  test_text_processor.py
