[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "AIHAO"
version = "0.0.1"
authors = [
  { name="Anthony Le", email="anthony.le@bristol.ac.uk" },
]
description = "A small test package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AnthonyLe93/AIHAO"
"Bug Tracker" = "https://github.com/AnthonyLe93/AIHAO/issues"