[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "pyobjc==9.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "AIHAO"
version = "0.0.1"
authors = [
  { name="Anthony Le", email="anthony.le@bristol.ac.uk" },
]
description = "A small test package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering'
]

[project.urls]
"Homepage" = "https://github.com/AnthonyLe93/AIHAO"
"Bug Tracker" = "https://github.com/AnthonyLe93/AIHAO/issues"